cluster/apps/wordpress/default-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-backend
  namespace: wordpress
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: default-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-backend
  namespace: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: default-backend
  template:
    metadata:
      labels:
        app: default-backend
    spec:
      containers:
        - name: default-backend
          image: gcr.io/google_containers/defaultbackend:1.5
          ports:
            - containerPort: 8080
